[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
# actix-web = { package = "actix-web", version = "4.2.1", optional = true}
actix-web = { package = "actix-web", version = "3.3.2"}
async-trait = "0.1.58"
env_logger = "0.10.0"
mockall = "0.11.3"
serde = "1.0.148"
sqlx = "0.4.2"
thiserror = "1.0.37"

[features]
default = ["post"]
post = ["sqlx/postgres", "sqlx/runtime-actix-native-tls"]
